move to nuxt
